# filesmanagers

./: .gitignore  CMakeLists.txt  README.md
app/flutter_shell/: README.md  pubspec.yaml
app/flutter_shell/android/: README.md  gradle.properties  local.properties.example
app/flutter_shell/android/app/: build.gradle.kts
app/flutter_shell/android/app/src/main/cpp/: CMakeLists.txt
app/flutter_shell/assets/: tessdata_config.json
app/flutter_shell/assets/i18n/: en.json  ru.json
app/flutter_shell/lib/: main.dart
app/flutter_shell/lib/src/: platform_services.dart
app/flutter_shell/lib/src/explorer/: explorer_models.dart  file_explorer_repository.dart
app/flutter_shell/lib/src/ffi/: crypt_bindings.dart
app/flutter_shell/lib/src/i18n/: app_language.dart
app/flutter_shell/linux/: README.md
app/flutter_shell/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/flutter_shell/test/: crypto_roundtrip_test.dart  widget_test.dart
app/flutter_shell/windows/: CMakeLists.txt  README.md
app/flutter_shell/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/flutter_shell/windows/runner/: Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp
core/crypt_core/: CMakeLists.txt
core/crypt_core/include/crypt/: api.h  common_header.h  constants.h  export.h  file_container.h  folder_meta.h  status.h
core/crypt_core/src/: api.c  common_header.c  file_container.c  folder_meta.c
core/crypt_core/src/internal/: le_io.h  memory.h
core/crypt_core/tests/: test_roundtrip.c
spec/: CRYPT_FORMAT_v1_0.md
(+23 files in other folders)
